<resources>
    <string name="app_name">NewProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language1">Spanish</string>
    <string name="language2">German</string>
    <string name="language3">Chinese</string>
    <string name="language4">Arabic</string>
    <string name="language5">Hebrew</string>
    <string name="language6">Russian</string>
    <string name="most_common_words">Most common words</string>
    <string name="tourist_category">Tourist Category</string>
    <string name="food_category">Food and Dining Category</string>
    <string name="places_category">Places Category</string>
    <string name="shopping_category">Shopping Category</string>
</resources>