<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/shopping_imageButton"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/shopping_category"
        android:background="@drawable/round_corner"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/places_imageButton"
        app:srcCompat="@drawable/shopping" />

    <ImageButton
        android:id="@+id/tourist_imageButton"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_corner"
        android:scaleType="fitStart"
        android:contentDescription="@string/tourist_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/common_words_imageButton"
        app:srcCompat="@drawable/tourist" />

    <ImageButton
        android:id="@+id/food_imageButton"
        android:layout_width="313dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_corner"
        android:contentDescription="@string/food_category"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tourist_imageButton"
        app:srcCompat="@drawable/food" />

    <ImageButton
        android:id="@+id/common_words_imageButton"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_corner"
        android:scaleType="fitStart"
        android:contentDescription="@string/most_common_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/common_words" />

    <ImageButton
        android:id="@+id/places_imageButton"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_corner"
        android:scaleType="fitCenter"
        android:contentDescription="@string/places_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_imageButton"
        app:srcCompat="@drawable/places" />
</androidx.constraintlayout.widget.ConstraintLayout>